[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-vault = { path = '../pallets/vault', default-features = false, version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-executive = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-support = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-system = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-assets = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-aura = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-balances = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-grandpa = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-sudo = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-timestamp = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-transaction-payment = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-block-builder = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-consensus-aura = { default-features = false, version = '0.9.0', git="https://github.com/paritytech/substrate" }
sp-core = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-offchain = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-session = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-std = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-transaction-pool = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-version = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-assets/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-vault/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
