[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { default-features = false, version = '4.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-vault = { path = '../pallets/vault', default-features = false, version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
frame-executive = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
frame-support = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
frame-system = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-assets = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-aura = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-balances = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-grandpa = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-sudo = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-timestamp = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-transaction-payment = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-api = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-block-builder = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-consensus-aura = { default-features = false, version = '0.9.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-core = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-inherents = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-offchain = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-runtime = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-session = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-std = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-transaction-pool = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}
sp-version = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master'}

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-assets/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-vault/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
