[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-liquidator-adapter'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }
frame-system = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }
pallet-assets = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }
sp-runtime = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }
sp-io = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate", branch = 'master' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-assets/std',
    'sp-runtime/std',
]
