[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-vault'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
frame-system = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
node-primitives = { version = "2.0.0", default-features = false, git="https://github.com/paritytech/substrate" }
pallet-assets = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-std = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }
sp-io = { default-features = false, version = '3.0.0', git="https://github.com/paritytech/substrate" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'node-primitives/std',
    'pallet-assets/std',
    'sp-runtime/std',
    'sp-std/std',
]
